Revision history for perl distribution JSON-Validator

4.15 Not Released
 - Removed deprecated functions joi() and validate_json()
 - Removed deprecated methods singleton() and version()

4.14 2021-02-23T14:58:07+0900
 - Add routes() to Schema::OpenAPIv2 and OpenAPIv3

4.13 2021-01-28T18:22:43+0900
 - Fix handling offset in RFC3339 date-time #236
 - Add CLEAR method to JSON::Validator::Ref #237

4.12 2021-01-25T07:52:34+0900
 - Fix not using Mojo::Exception::raise() #235
 - Fix uninitialized warning when looking up schema for an internal $ref

4.11 2021-01-24T16:02:02+0900
 - Add JSON::Validator::Schema::OpenAPIv2
   * Extends JSON::Validator::Schema::Draft4
   * Can validate OpenAPIv2 API specifiation
   * Can validate HTTP request and response
   * Can validate "Accept" and "Content-Type"
   * Can handle "discriminator"
   * Can handle "readOnly" parameters
   * Can handle collectionFormat
   * Can handle default values for parameters
   * Can convert specifiation with invalid "$ref" into a valid OpenAPIv2 specifiation
   * Will coerce query parameters and headers into arrays if needed
 - Add JSON::Validator::Schema::OpenAPIv3
   * Extends JSON::Validator::Schema::Draft201909
   * Can validate OpenAPIv3 API specifiation
   * Can validate HTTP request and response
   * Can validate "Accept" and "Content-Type"
   * Can handle "discriminator"
   * Can handle "nullable" parameters
   * Can handle "readOnly" parameters
   * Can handle "style" and "explode" for arrays and objects parameters
   * Can handle "writeOnly" parameters
   * Can handle default values for parameters
   * Will coerce query parameters and headers into arrays if needed
 - Add negotiate_content_type() utility function
 - Fix t/load-file.t on Windows #234
 - Fix not checking if input schema is a file if it has a newline #223 #233
   Contributor: David Cantrell
 - Improved error message when loading non-existing file #231

4.10 2020-10-13T10:53:11+0900
 - Add JSON::Validator::Store