@@ -1,10 +1,10 @@
 ---
 $schema: http://json-schema.org/draft-07/schema#
-definitions:
+$defs:
   ref1:
     type: array
     items:
-      $ref: /definitions/ref2
+      $ref: /$defs/ref2
   ref2:
     type: string
     minLength: 1
@@ -16,9 +16,9 @@ definitions:
     type: object
     properties:
       my_key1:
-        $ref: /definitions/ref1
+        $ref: /$defs/ref1
       my_key2:
-        $ref: /definitions/ref1
+        $ref: /$defs/ref1
   # actually a person, as in https://json-schema.org/understanding-json-schema/structuring.html
   i_have_a_recursive_ref:
     type: object
@@ -28,39 +28,39 @@ definitions:
       children:
         type: array
         items:
-          $ref: /definitions/i_have_a_recursive_ref
+          $ref: /$defs/i_have_a_recursive_ref
         default: []
   i_have_a_ref_to_another_file:
     type: object
     properties:
       name:
-        $ref: more-bundle2.yaml#/definitions/my_name
+        $ref: more-bundle2.yaml#/$defs/my_name
       address:
-        $ref: more-bundle2.yaml#/definitions/my_address
+        $ref: more-bundle2.yaml#/$defs/my_address
       secrets:
-        $ref: /definitions/ref1
+        $ref: /$defs/ref1
   i_am_a_ref:
-    $ref: /definitions/ref1
+    $ref: /$defs/ref1
   i_am_a_ref_level_1:
-    $ref: /definitions/i_am_a_ref_level_2
+    $ref: /$defs/i_am_a_ref_level_2
   i_am_a_ref_level_2:
-    $ref: /definitions/ref3
+    $ref: /$defs/ref3
   i_am_a_ref_to_another_file:
-    $ref: more-bundle2.yaml#/definitions/i_have_a_ref_to_the_first_filename
+    $ref: more-bundle2.yaml#/$defs/i_have_a_ref_to_the_first_filename
   i_am_a_ref_with_the_same_name:
-    $ref: more-bundle2.yaml#/definitions/i_am_a_ref_with_the_same_name
+    $ref: more-bundle2.yaml#/$defs/i_am_a_ref_with_the_same_name
   i_have_refs_with_the_same_name:
     type: object
     properties:
       me:
-        $ref: /definitions/i_am_a_ref_with_the_same_name
+        $ref: /$defs/i_am_a_ref_with_the_same_name
   i_contain_refs_to_same_named_definitions:
     type: object
     properties:
       foo:
-        $ref: /definitions/dupe_name
+        $ref: /$defs/dupe_name
       bar:
-        $ref: more-bundle2.yaml#/definitions/dupe_name
+        $ref: more-bundle2.yaml#/$defs/dupe_name
   i_have_a_ref_with_the_same_name:
     type: object
     properties:
@@ -69,5 +69,5 @@ definitions:
       children:
         type: array
         items:
-          $ref: more-bundle2.yaml#/definitions/i_have_a_ref_with_the_same_name
+          $ref: more-bundle2.yaml#/$defs/i_have_a_ref_with_the_same_name
         default: []
